# intro_task

task1/: CMakeLists.txt  package.xml  readme.md
task1/src/: drawing_circle.cpp
task2/: package.xml  readme.md  setup.py
task2/task2/: ball_detecting.py  turtle_controler.py
